--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4",
-    "homepage": "https://prantik007.github.io"
+    "homepage": "https://prantik007.github.io/Kooper"
   },
   "scripts": {
     "start": "react-scripts start",
